--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
   },
   "scripts": {
     "test": "karma start test/karma.conf.js"
+  },
+  "dependencies": {
+    "@uirouter/angularjs": "^1.0.18"
   }
 }
