--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
         "angular-resource": "^1.4.0",
         "angular-route": "^1.4.0",
         "angular-sanitize": "^1.4.0",
-        "angular-touch": "^1.4.0"
+        "angular-touch": "^1.4.0",
+        "angular-translate": "^2.18.1",
+        "angular-translate-loader-static-files": "^2.18.1"
     },
     "devDependencies": {
         "angular-mocks": "^1.4.0"
